Templates/change-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    dev: Bruno Silva
    empresa: RNP
    imageregistry: https://hub.docker.com/
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{"deployment.kubernetes.io/revision":"1","dev":"Bruno Silva","empresa":"RNP","imageregistry":"https://hub.docker.com/","kubernetes.io/change-cause":"Implantação do tomcat:8.0 com annotations"},"creationTimestamp":"2022-01-28T20:33:28Z","generation":1,"labels":{"app":"tomcat-app"},"name":"tomcat-deployment","namespace":"default","resourceVersion":"1039514","selfLink":"/apis/apps/v1/namespaces/default/deployments/tomcat-de [...]
    kubernetes.io/change-cause: Implantação do tomcat:8.0 com annotations
  creationTimestamp: "2022-03-05T19:05:09Z"
  generation: 1
  labels:
    app: tomcat-app
  name: tomcat-deployment
  namespace: default
  resourceVersion: "540163"
  selfLink: /apis/apps/v1/namespaces/default/deployments/tomcat-deployment
  uid: a09f4203-7414-4b19-b362-3cf1b4917655
spec:
  progressDeadlineSeconds: 600
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: tomcat-app
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        change-cause: Implantação da versão tomcat:8.0.
      creationTimestamp: null
      labels:
        app: tomcat-app
    spec:
      containers:
      - image: brunojose1977/tomcat8
        imagePullPolicy: Always
        name: tomcat8
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 3
  conditions:
  - lastTransitionTime: "2022-03-05T19:05:16Z"
    lastUpdateTime: "2022-03-05T19:05:16Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2022-03-05T19:05:09Z"
    lastUpdateTime: "2022-03-05T19:05:16Z"
    message: ReplicaSet "tomcat-deployment-56b659457c" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 1
  readyReplicas: 3
  replicas: 3
  updatedReplicas: 3
