Templates/change-pod-tomcat-deployment-56b659457c-mh2l7.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    change-cause: Implantação da versão tomcat:8.0.
    cni.projectcalico.org/podIP: 10.1.187.204/32
    cni.projectcalico.org/podIPs: 10.1.187.204/32
  creationTimestamp: "2022-03-05T19:05:09Z"
  generateName: tomcat-deployment-56b659457c-
  labels:
    app: tomcat-app
    pod-template-hash: 56b659457c
  name: tomcat-deployment-56b659457c-mh2l7
  namespace: default
  ownerReferences:
  - apiVersion: apps/v1
    blockOwnerDeletion: true
    controller: true
    kind: ReplicaSet
    name: tomcat-deployment-56b659457c
    uid: 3e408e0b-4338-4f39-bfa9-6f3091d56237
  resourceVersion: "540139"
  selfLink: /api/v1/namespaces/default/pods/tomcat-deployment-56b659457c-mh2l7
  uid: 5c7cb728-c550-4909-a3a2-4dd80979dee9
spec:
  containers:
  - image: brunojose1977/tomcat8
    imagePullPolicy: Always
    name: tomcat8
    ports:
    - containerPort: 8080
      protocol: TCP
    resources: {}
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: kube-api-access-47xg5
      readOnly: true
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  nodeName: sibbr-latitude-e7240
  preemptionPolicy: PreemptLowerPriority
  priority: 0
  restartPolicy: Always
  schedulerName: default-scheduler
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - name: kube-api-access-47xg5
    projected:
      defaultMode: 420
      sources:
      - serviceAccountToken:
          expirationSeconds: 3607
          path: token
      - configMap:
          items:
          - key: ca.crt
            path: ca.crt
          name: kube-root-ca.crt
      - downwardAPI:
          items:
          - fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
            path: namespace
status:
  conditions:
  - lastProbeTime: null
    lastTransitionTime: "2022-03-05T19:05:09Z"
    status: "True"
    type: Initialized
  - lastProbeTime: null
    lastTransitionTime: "2022-03-05T19:05:12Z"
    status: "True"
    type: Ready
  - lastProbeTime: null
    lastTransitionTime: "2022-03-05T19:05:12Z"
    status: "True"
    type: ContainersReady
  - lastProbeTime: null
    lastTransitionTime: "2022-03-05T19:05:09Z"
    status: "True"
    type: PodScheduled
  containerStatuses:
  - containerID: containerd://1215d5fc438074cf532ad3f5b41c6a062d303d716a38e9f3a6e4a50ffb0b3a60
    image: docker.io/brunojose1977/tomcat8:latest
    imageID: docker.io/brunojose1977/tomcat8@sha256:62b8f974de841b0c7ddf2fdfae13332aac48a1dc55e7f7b28719bfaa6b3d6700
    lastState: {}
    name: tomcat8
    ready: true
    restartCount: 0
    started: true
    state:
      running:
        startedAt: "2022-03-05T19:05:12Z"
  hostIP: 192.168.1.4
  phase: Running
  podIP: 10.1.187.204
  podIPs:
  - ip: 10.1.187.204
  qosClass: BestEffort
  startTime: "2022-03-05T19:05:09Z"
