Templates/simple-tomcat-deployment-replicas-template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
#Inicio das anotações customizadas
#Sempre que for alterar e dar um apply -f utilize a diretiva --record
#Exemplo: Para ver o histório dos rollouts: kubectl rollout history deployment tomcat-deployment
    kubernetes.io/change-cause: Implantação do tomcat:8.0
    imageregistry: "https://hub.docker.com/"
    kubernetes.io/change-cause: "Implantação do tomcat:8.0 com annotations"
    dev: "Bruno Silva"
    empresa: "RNP"
#Fim das anotações customizadas
  creationTimestamp: "2022-01-28T20:33:28Z"
  generation: 1
  labels:
    app: tomcat-app
  name: tomcat-deployment
  namespace: default
  resourceVersion: "1039514"
  selfLink: /apis/apps/v1/namespaces/default/deployments/tomcat-deployment
  uid: 18d678a8-bdd3-4ade-8b48-67e5de8f75ab
spec:
  progressDeadlineSeconds: 600
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: tomcat-app
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: tomcat-app
      annotations:
#        change-cause: "Implantação da versão tomcat:7.0.93-alpine."
        change-cause: "Implantação da versão tomcat:8.0."
    spec:
      containers:
#      - image: tomcat:7.0.93-alpine
#      - image: tomcat:8.0
      - image: brunojose1977/tomcat8


        imagePullPolicy: Always
        name: tomcat8
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 3
  conditions:
  - lastTransitionTime: "2022-01-28T20:33:39Z"
    lastUpdateTime: "2022-01-28T20:33:39Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2022-01-28T20:33:28Z"
    lastUpdateTime: "2022-01-28T20:33:39Z"
    message: ReplicaSet "tomcat-deployment-6bb7c676cc" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 1
  readyReplicas: 3
  replicas: 3
  updatedReplicas: 3
