Templates/simple-tomcat-pod-template.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: tomcat-app
    name: tomcat-pod

spec:
  containers:
  - image: brunojose1977/tomcat8
    name: tomcat-pod
    ports:
    - containerPort: 8080
      protocol: TCP
    resources: {}
