Templates/simple-tomcat8-pod-template.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: tomcat
  name: tomcat8-pod

spec:
  containers:
  - image: brunojose1977/tomcat8
    name: tomcat8-pod
    ports:
    - containerPort: 8080
      protocol: TCP
    resources: {}
