Templates/simple-tomcat8-replica-3-deployment-template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: "2022-01-25T23:31:29Z"
  generation: 1
  labels:
    app: tomcat8-deployment
  name: tomcat8-deployment
  namespace: default
  resourceVersion: "918131"
  selfLink: /apis/apps/v1/namespaces/default/deployments/tomcat8-deployment
  uid: deaa1288-f389-4b63-9360-c26d4d8bc088
spec:
  progressDeadlineSeconds: 600
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: tomcat8-deployment
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: tomcat8-deployment
    spec:
      containers:
      - image: brunojose1977/tomcat8
        imagePullPolicy: Always
        name: tomcat8
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 3
  conditions:
  - lastTransitionTime: "2022-01-25T23:31:30Z"
    lastUpdateTime: "2022-01-25T23:31:58Z"
    message: ReplicaSet "tomcat8-deployment-6bb7c676cc" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2022-01-25T23:40:03Z"
    lastUpdateTime: "2022-01-25T23:40:03Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 1
  readyReplicas: 3
  replicas: 3
  updatedReplicas: 3
