Templates/simple-tomcat-expose-deployment-replicas-service-type-load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2022-01-28T21:21:03Z"
  labels:
    app: tomcat-app
  name: tomcat-deployment-loadbalancer-service
  namespace: default
  resourceVersion: "1044882"
  selfLink: /api/v1/namespaces/default/services/tomcat-deployment-loadbalancer-service
  uid: 7a007083-dc5c-4918-bab0-45296047fa25
spec:
  allocateLoadBalancerNodePorts: true
  clusterIP: 10.152.183.143
  clusterIPs:
  - 10.152.183.143
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - nodePort: 31335
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: tomcat-app
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer: {}
