Templates/simple-tomcat8-expose-replicaset-service-type-load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2022-01-28T22:07:59Z"
  name: tomcat8-replicaset-loadbalancer-service
  namespace: default
  resourceVersion: "1049548"
  selfLink: /api/v1/namespaces/default/services/tomcat8-replicaset-loadbalancer-service
  uid: c03e200b-4d25-43f4-aac6-7bc52f17d6f4
spec:
  allocateLoadBalancerNodePorts: true
  clusterIP: 10.152.183.81
  clusterIPs:
  - 10.152.183.81
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - nodePort: 32643
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: tomcat-app
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer: {}
